--- a/digitelQpcApp/Db/digitelQpcIonp.template
+++ b/digitelQpcApp/Db/digitelQpcIonp.template
@@ -1,4 +1,4 @@
-# digitelMpcIonp.template
+# digitelQpcIonp.template
 #% macro, __doc__, Template database for digitel MPC - Ion Pump
 # Pete Owens - 30/9/03
 #
@@ -18,12 +18,12 @@
 ################################################################################
 
 # This associates an edm screen with the template
-# % gui, $(name=), edm, digitelMpcIonp2sp.edl, device=$(device)
+# % gui, $(name=), edm, digitelQpcIonp2sp.edl, device=$(device)
 
 # This associates BOY screens with the template
-# % gui, $(name=), boydetail, digitelMpcApp_opi/ionp_detail.opi, device=$(device), desc=$(device), name=$(name=)
-# % gui, $(name=), boyembed, digitelMpcApp_opi/ionp_embed_box.opi, device=$(device), desc=$(device), name=$(name=)
-# % gui, $(name=), boyembed, digitelMpcApp_opi/ionp_embed.opi, device=$(device), desc=$(device), name=$(name=)
+# % gui, $(name=), boydetail, digitelQpcApp_opi/ionp_detail.opi, device=$(device), desc=$(device), name=$(name=)
+# % gui, $(name=), boyembed, digitelQpcApp_opi/ionp_embed_box.opi, device=$(device), desc=$(device), name=$(name=)
+# % gui, $(name=), boyembed, digitelQpcApp_opi/ionp_embed.opi, device=$(device), desc=$(device), name=$(name=)
 
 # These define what PVs a valve detail screen should contain
 # % gui, $(name=), readback, Status,   $(device):STA
@@ -52,7 +52,7 @@
 record(ai, "$(device):I") {
     field(DESC, "Pump Current")
     field(DTYP, "stream")
-    field(INP,  "@digitelMpc.proto current($(unit),$(pump)) $(port)")
+    field(INP,  "@digitelQpc.proto current($(unit),$(pump)) $(port)")
     field(SCAN, "1 second")
     field(EGU,  "A")
     field(LOPR, "0.0")
@@ -68,7 +68,7 @@ record(ai, "$(device):I") {
 record(ai, "$(device):P") {
     field(DESC, "Pump Pressure")
     field(DTYP, "stream")
-    field(INP,  "@digitelMpc.proto pressure($(unit),$(pump)) $(port)")
+    field(INP,  "@digitelQpc.proto pressure($(unit),$(pump)) $(port)")
     field(SCAN, "1 second")
     field(FLNK, "$(device):PLOG")
     field(EGU,  "mbar")
@@ -111,7 +111,7 @@ record(calc, "$(device):PLOG")
 record(longin, "$(device):V") {
     field(DESC, "Pump Voltage")
     field(DTYP, "stream")
-    field(INP,  "@digitelMpc.proto voltage($(unit),$(pump)) $(port)")
+    field(INP,  "@digitelQpc.proto voltage($(unit),$(pump)) $(port)")
     field(SCAN, "1 second")
     field(EGU,  "V")
     field(LOPR, "0")
@@ -127,7 +127,7 @@ record(longin, "$(device):HV")
 {
     field(DESC, "HV Strapping")
     field(DTYP, "stream")
-    field(INP,  "@digitelMpc.proto strap($(unit),$(pump)) $(port)")
+    field(INP,  "@digitelQpc.proto strap($(unit),$(pump)) $(port)")
     field(SCAN, "10 second")
     field(EGU,  "V")
     field(LOPR, "5600")
@@ -143,7 +143,7 @@ record(mbbi, "$(device):STA")
 {
     field(DESC, "Supply Status")
     field(DTYP, "stream")
-    field(INP,  "@digitelMpc.proto status($(unit),$(pump)) $(port)")
+    field(INP,  "@digitelQpc.proto status($(unit),$(pump)) $(port)")
     field(SCAN, "1 second")
     field(ZRST, "Unknown")
     field(ONST, "Waiting")
@@ -197,7 +197,7 @@ record(longin, "$(device):ERRGET")
 {
     field(DESC, "Get Error Code")
     field(DTYP, "stream")
-    field(INP,  "@digitelMpc.proto err($(unit),$(pump)) $(port)")
+    field(INP,  "@digitelQpc.proto err($(unit),$(pump)) $(port)")
     field(SCAN, "Passive")
 }
 
@@ -261,7 +261,7 @@ record(mbbi, "$(device):ERR")
 record(longin, "$(device):SIZE") {
     field(DESC, "Pump Size")
     field(DTYP, "stream")
-    field(INP,  "@digitelMpc.proto size($(unit),$(pump)) $(port)")
+    field(INP,  "@digitelQpc.proto size($(unit),$(pump)) $(port)")
     field(SCAN, "10 second")
     field(EGU,  "l/s")
     field(LOPR, "0")
@@ -274,7 +274,7 @@ record(longin, "$(device):SIZE") {
 record(ao, "$(device):SETSIZE") {
     field(DESC, "Pump Size")
     field(DTYP, "stream")
-    field(OUT,  "@digitelMpc.proto setsize($(unit),$(pump)) $(port)")
+    field(OUT,  "@digitelQpc.proto setsize($(unit),$(pump)) $(port)")
     field(PINI, "YES")
     field(DOL,  "$(size)")
     field(EGU,  "l/s")
@@ -293,7 +293,7 @@ record(ao, "$(device):SETSIZE") {
 record(ai, "$(device):CAL") {
     field(DESC, "Calibration Factor")
     field(DTYP, "stream")
-    field(INP,  "@digitelMpc.proto cal($(unit),$(pump)) $(port)")
+    field(INP,  "@digitelQpc.proto cal($(unit),$(pump)) $(port)")
     field(SCAN, "10 second")
     field(LOPR, "0.0")
     field(HOPR, "9.99")
@@ -306,7 +306,7 @@ record(ai, "$(device):CAL") {
 record(ao, "$(device):SETCAL") {
     field(DESC, "Calibration Factor")
     field(DTYP, "stream")
-    field(OUT,  "@digitelMpc.proto setcal($(unit),$(pump)) $(port)")
+    field(OUT,  "@digitelQpc.proto setcal($(unit),$(pump)) $(port)")
     field(DRVL, "0.0")
     field(DRVH, "9.99")
     field(LOPR, "0.0")
@@ -323,7 +323,7 @@ record(bo, "$(device):START")
 {
     field(DESC, "HV on/off")
     field(DTYP, "stream")
-    field(OUT,  "@digitelMpc.proto start($(unit),$(pump)) $(port)")
+    field(OUT,  "@digitelQpc.proto start($(unit),$(pump)) $(port)")
     field(ZNAM, "Stop")
     field(ONAM, "Start")
 }
@@ -439,7 +439,7 @@ record(ai, "$(device):RQSTSP1ON")
     field(DESC, "Rqst Setpoint1")
     field(DTYP, "stream")
     field(SCAN, "Passive")
-    field(INP,  "@digitelMpc.proto getsps($(unit),$(device),1) $(port)")
+    field(INP,  "@digitelQpc.proto getsps($(unit),$(device),1) $(port)")
     field(PINI, "NO")
     }
 
@@ -449,7 +449,7 @@ record(ai, "$(device):RQSTSP2ON")
     field(DESC, "Rqst Setpoint2")
     field(DTYP, "stream")
     field(SCAN, "Passive")
-    field(INP,  "@digitelMpc.proto getsps($(unit),$(device),2) $(port)")
+    field(INP,  "@digitelQpc.proto getsps($(unit),$(device),2) $(port)")
     field(PINI, "NO")
     }
 
@@ -536,8 +536,8 @@ record(calcout, "$(device):SETSPS1")
     {
     field(DESC, "Output Setpoints")
     field(DTYP, "stream")
-    field(OUT,  "@digitelMpc.proto setsps($(unit),$(device),1) $(port)")
-##    field(OUT,  "@digitelMpc.proto setsps($(unit),$(pump)) $(port)")
+    field(OUT,  "@digitelQpc.proto setsps($(unit),$(device),1) $(port)")
+##    field(OUT,  "@digitelQpc.proto setsps($(unit),$(pump)) $(port)")
     field(INPA, "$(device):SETSP1ON")
     field(INPB, "$(device):SETSP1OFF")
     field(INPC, "$(pump)")
@@ -632,8 +632,8 @@ record(calcout, "$(device):SETSPS2")
     {
     field(DESC, "Output Setpoints")
     field(DTYP, "stream")
-    field(OUT,  "@digitelMpc.proto setsps($(unit),$(device),1) $(port)")
-##    field(OUT,  "@digitelMpc.proto setsps($(unit),$(pump)) $(port)")
+    field(OUT,  "@digitelQpc.proto setsps($(unit),$(device),1) $(port)")
+##    field(OUT,  "@digitelQpc.proto setsps($(unit),$(pump)) $(port)")
     field(INPA, "$(device):SETSP2ON")
     field(INPB, "$(device):SETSP2OFF")
     field(INPC, "$(pump)")
@@ -681,7 +681,7 @@ record(stringout, "$(device):SETTEXT") {
     field(DESC, "Text String")
     field(VAL , "$(text=$(device))")
     field(DTYP, "stream")
-    field(OUT,  "@digitelMpc.proto settext($(unit),$(pump)) $(port)")
+    field(OUT,  "@digitelQpc.proto settext($(unit),$(pump)) $(port)")
     field(PINI, "YES")
 }
 ################################################################################
