--- a/digitelQpcApp/Db/digitelQpcIonpGroup.template
+++ b/digitelQpcApp/Db/digitelQpcIonpGroup.template
@@ -1,4 +1,4 @@
-# digitelMpcIonpGroup.db
+# digitelQpcIonpGroup.db
 #% macro, __doc__, Template database for a group of up to 8 digitel MPC Ion Pumps
 # Pete Owens - 3/5/05
 #
