--- a/digitelQpcApp/Db/digitelQpcTsp.template
+++ b/digitelQpcApp/Db/digitelQpcTsp.template
@@ -1,4 +1,4 @@
-# digitelMpc-tsp.db
+# digitelQpc-tsp.db
 #% macro, __doc__, Template database for digitel MPC - Titanium Sublimation Pump
 # Pete Owens - 13/10/03
 #
@@ -7,7 +7,7 @@
 #% macro, port, asyn seral port number (e.g. ty_40_0)
 #% macro, unit, unit number for multi-drop serial
 #% macro, ctlsrc, control source (0 = service, 1 = Ion Pump 1, 2 = Ion Pump 2)
-#% macro, protocol, name of protocol file, either digitelMpc.proto or digitelMpcDual.proto
+#% macro, protocol, name of protocol file, either digitelQpc.proto or digitelQpcDual.proto
 #% macro, totmax, cycle max off time (default 600 mins) 
 #% macro, tcmax, max number of cycles (default 20) 
 # duration- On duration (s)       - new addition May 2010 for dual TSP systems on MPCe - defaults to 10
@@ -65,7 +65,7 @@ record(mbbi, "$(device):RAWSTA")
 {
     field(DESC, "Raw Status")
     field(DTYP, "stream")
-    field(INP,  "@$(protocol=digitelMpc.proto) tspsta($(unit),$(device):RELAY) $(port)")
+    field(INP,  "@$(protocol=digitelQpc.proto) tspsta($(unit),$(device):RELAY) $(port)")
     field(SCAN, "1 second")
     field(FLNK, "$(device):CALSTA")
 }
@@ -79,7 +79,7 @@ record(mbbi, "$(device):FIL1:STA")
 {
     field(DESC, "Filament 1 Status")
     field(DTYP, "stream")
-    field(INP,  "@$(protocol=digitelMpc.proto) filsta($(unit),1,$(device):RELAY) $(port)")
+    field(INP,  "@$(protocol=digitelQpc.proto) filsta($(unit),1,$(device):RELAY) $(port)")
     field(SCAN, "1 second")
     field(ZRST, "Not Installed")
     field(ONST, "Inactive")
@@ -113,7 +113,7 @@ record(mbbi, "$(device):FIL2:STA")
 {
     field(DESC, "Filament 2 Status")
     field(DTYP, "stream")
-    field(INP,  "@$(protocol=digitelMpc.proto) filsta($(unit),2,$(device):RELAY) $(port)")
+    field(INP,  "@$(protocol=digitelQpc.proto) filsta($(unit),2,$(device):RELAY) $(port)")
     field(SCAN, "1 second")
     field(ZRST, "Not Installed")
     field(ONST, "Inactive")
@@ -147,7 +147,7 @@ record(mbbi, "$(device):FIL3:STA")
 {
     field(DESC, "Filament 3 Status")
     field(DTYP, "stream")
-    field(INP,  "@$(protocol=digitelMpc.proto) filsta($(unit),3,$(device):RELAY) $(port)")
+    field(INP,  "@$(protocol=digitelQpc.proto) filsta($(unit),3,$(device):RELAY) $(port)")
     field(SCAN, "1 second")
     field(ZRST, "Not Installed")
     field(ONST, "Inactive")
@@ -183,7 +183,7 @@ record(ai, "$(device):POWER")
 {
     field(DESC, "Power")
     field(DTYP, "stream")
-    field(INP,  "@$(protocol=digitelMpc.proto) power($(unit)) $(port)")
+    field(INP,  "@$(protocol=digitelQpc.proto) power($(unit)) $(port)")
     field(SCAN, "1 second")
     field(EGU,  "W")
     field(LOPR, "0.0")
@@ -209,7 +209,7 @@ record(ao, "$(device):OUTPOWER")
 #
     field(DESC, "Power")
     field(DTYP, "stream")
-    field(OUT,  "@$(protocol=digitelMpc.proto) setpower($(unit),$(device):RELAY) $(port)")
+    field(OUT,  "@$(protocol=digitelQpc.proto) setpower($(unit),$(device):RELAY) $(port)")
     field(EGU,  "W")
     field(DRVL, "0")
     field(DRVH, "250")
@@ -221,7 +221,7 @@ record(bo, "$(device):TSPOFF")
 {
     field(DESC, "Switch TSP Off")
     field(DTYP, "stream")
-    field(OUT,  "@$(protocol=digitelMpc.proto) tspoff($(unit)) $(port)")
+    field(OUT,  "@$(protocol=digitelQpc.proto) tspoff($(unit)) $(port)")
     field(ZNAM, "Off")
     field(ONAM, "Off")
 }
@@ -829,7 +829,7 @@ record(mbbi, "$(device):FIL")
 {
     field(DESC, "Filament Active")
     field(DTYP, "stream")
-    field(INP,  "@$(protocol=digitelMpc.proto) fil($(unit)) $(port)")
+    field(INP,  "@$(protocol=digitelQpc.proto) fil($(unit)) $(port)")
     field(SCAN, "1 second")
     field(ZRST, "Filament 1")
     field(ONST, "Filament 2")
@@ -844,7 +844,7 @@ record(mbbo, "$(device):SETFIL")
 {
     field(DESC, "Filament Active")
     field(DTYP, "stream")
-    field(OUT,  "@$(protocol=digitelMpc.proto) setfil($(unit),$(device):RELAY) $(port)")
+    field(OUT,  "@$(protocol=digitelQpc.proto) setfil($(unit),$(device):RELAY) $(port)")
     field(ZRST, "Filament 1")
     field(ONST, "Filament 2")
     field(TWST, "Filament 3")
@@ -860,7 +860,7 @@ record(longin, "$(device):LEFT")
 {
     field(DESC, "Cycles Left")
     field(DTYP, "stream")
-    field(INP,  "@$(protocol=digitelMpc.proto) left($(unit),$(device),$(device):RELAY) $(port)")
+    field(INP,  "@$(protocol=digitelQpc.proto) left($(unit),$(device),$(device):RELAY) $(port)")
     field(SCAN, "10 second")
     field(LOPR, "0")
     field(HOPR, "999")
@@ -953,7 +953,7 @@ record(bo, "$(device):CLEAR")
 {
     field(DESC, "Clear Filaments")
     field(DTYP, "stream")
-    field(OUT,  "@$(protocol=digitelMpc.proto) clear($(unit),$(device):RELAY) $(port)")
+    field(OUT,  "@$(protocol=digitelQpc.proto) clear($(unit),$(device):RELAY) $(port)")
     field(ZNAM, "Clear")
     field(ONAM, "Clear")
 }
@@ -975,7 +975,7 @@ record(bo, "$(device):OUTAUTOFIL")
 {
     field(DESC, "Auto Advance")
     field(DTYP, "stream")
-    field(OUT,  "@$(protocol=digitelMpc.proto) autofil($(unit)) $(port)")
+    field(OUT,  "@$(protocol=digitelQpc.proto) autofil($(unit)) $(port)")
     field(ZNAM, "No")
     field(ONAM, "Yes")
     field(DOL,  "0")
@@ -991,7 +991,7 @@ record(mbbo, "$(device):CTLSRC")
 {
     field(DESC, "Control Source")
     field(DTYP, "stream")
-    field(OUT,  "@$(protocol=digitelMpc.proto) ctlsrc($(unit),$(device):RELAY) $(port)")
+    field(OUT,  "@$(protocol=digitelQpc.proto) ctlsrc($(unit),$(device):RELAY) $(port)")
     field(ZRST, "Service")
     field(ONST, "Ion Pump 1")
     field(TWST, "Ion Pump 2")
@@ -1005,7 +1005,7 @@ record(ao, "$(device):SETPTHR")
 {
     field(DESC, "Pressure Threshold")
     field(DTYP, "stream")
-    field(OUT,  "@$(protocol=digitelMpc.proto) thresh($(unit),$(device):RELAY) $(port)")
+    field(OUT,  "@$(protocol=digitelQpc.proto) thresh($(unit),$(device):RELAY) $(port)")
     field(EGU,  "mbar")
     field(DRVL, "1.0e-9")
     field(DRVH, "1.0e-5")
@@ -1024,7 +1024,7 @@ record(mbbi, "$(device):CONFIG")
 {
     field(DESC, "Configuration mode")
     field(DTYP, "stream")
-    field(INP,  "@$(protocol=digitelMpc.proto) getconfig($(unit)) $(port)")
+    field(INP,  "@$(protocol=digitelQpc.proto) getconfig($(unit)) $(port)")
     field(SCAN, "10 second")
     field(ZRST, "Fault")
     field(ONST, "Not Installed")
