--- a/digitelQpcApp/Db/digitelQpcTspDummy.template
+++ b/digitelQpcApp/Db/digitelQpcTspDummy.template
@@ -1,4 +1,4 @@
-# digitelMpcTspDummy.template
+# digitelQpcTspDummy.template
 #% macro, __doc__, Template dummy records for digitel MPC - Titanium Sublimation Pump
 # Ian Gillingham - 04/02/16
 #
