--- a/digitelQpcApp/Db/digitelQpcTspGroup.template
+++ b/digitelQpcApp/Db/digitelQpcTspGroup.template
@@ -1,4 +1,4 @@
-# digitelMpcTspGroup.db
+# digitelQpcTspGroup.db
 #% macro, __doc__, Template database for a group of up to 8 digitel MPC TSPs
 # Pete Owens - 11/4/05
 #
