--- a/digitelQpcApp/Db/digitelQpcIonp.template
+++ b/digitelQpcApp/Db/digitelQpcIonp.template
@@ -11,8 +11,7 @@
 #% macro, size, pump size (l/s)
 #% macro, sp1on, setpoint1 on
 #% macro, sp1off, setpoint1 off
-#% macro, sp2on, setpoint2 on
-#% macro, sp2off, setpoint2 off
+#% macro, display, label on controller screen
 #% macro, alh,  alarm handler tag (Defaults to None) c.f. mp49's commit 80833
 #% macro, text, Text to display in the ion pump controller window.
 ################################################################################
@@ -45,6 +44,46 @@
 # % gui, $(name=), readback, Setpoint 2 Off,  $(device):SP2OFF
 # % gui, $(name=), demand, Setpoint 2 Off,  $(device):SETSP2OFF
 
+################################################################################
+# Automatically Restart on power up
+#
+record(bo, "$(device):SETAUTOST")
+{
+    field(DESC, "Auto Restart")
+    field(DTYP, "stream")
+    field(OUT,  "@digitelQpc.proto setautost($(unit=01),$(pump)) $(port)")
+    field(ZNAM, "No")
+    field(ONAM, "Yes")
+    field(DOL,  "0")
+    field(PINI, "YES")
+}
+#
+#% controldesk Auto Restart smon
+#
+record(bi, "$(device):AUTOST")
+{
+    field(DESC, "Auto Restart")
+    field(DTYP, "stream")
+    field(INP,  "@digitelQpc.proto autost($(unit=01),$(pump)) $(port)")
+    field(SCAN, "10 second")
+    field(ZNAM, "No")
+    field(ONAM, "Yes")
+}
+
+################################################################################
+# Switch on/off HV
+#
+record(bo, "$(device):SETHV")
+{
+    field(DESC, "HV On / Off")
+    field(DTYP, "stream")
+    field(OUT,  "@digitelQpc.proto sethv($(unit=01),$(pump)) $(port)")
+    field(ZNAM, "Off")
+    field(ONAM, "On")
+    field(DOL,  "0")
+    field(PINI, "YES")
+}
+
 # Read pump current
 #
 #% controldesk Current readback
@@ -59,6 +98,31 @@ record(ai, "$(device):I") {
     field(HOPR, "10.0")
     field(PREC, "1")
 }
+
+################################################################################
+# Get Line Voltage - and inform the firmware
+#
+#% controldesk Line Voltage readback
+#
+record(longin, "$(device):V")
+{
+    field(DESC, "Line Voltage")
+    field(DTYP, "stream")
+    field(INP,  "@digitelQpc.proto linev($(unit=01),$(pump)) $(port)")
+    field(SCAN, "10 second")
+    field(EGU,  "V")
+    field(LOPR, "160")
+    field(HOPR, "240")
+    field(HIHI, "260")
+    field(HIGH, "241")
+    field(LOW,  "239")
+    field(LOLO, "220")
+    field(HHSV, "MAJOR")
+    field(HSV,  "MINOR")
+    field(LSV,  "MINOR")
+    field(LLSV, "MAJOR")
+}
+
 ################################################################################
 # Read pump pressure
 #
@@ -117,22 +181,7 @@ record(longin, "$(device):V") {
     field(LOPR, "0")
     field(HOPR, "10")
 }
-################################################################################
-# Get HV Strapping
-#
-#% archiver 1 Monitor
-#% controldesk HV Strapping readback
-#
-record(longin, "$(device):HV") 
-{
-    field(DESC, "HV Strapping")
-    field(DTYP, "stream")
-    field(INP,  "@digitelQpc.proto strap($(unit),$(pump)) $(port)")
-    field(SCAN, "10 second")
-    field(EGU,  "V")
-    field(LOPR, "5600")
-    field(HOPR, "7000")
-}
+
 ################################################################################
 # Get supply status
 #
@@ -143,19 +192,19 @@ record(mbbi, "$(device):STA")
 {
     field(DESC, "Supply Status")
     field(DTYP, "stream")
-    field(INP,  "@digitelQpc.proto status($(unit),$(pump)) $(port)")
+    field(INP,  "@digitelQpc.proto status($(unit),$(pump),$(device):ERROR) $(port)")
     field(SCAN, "1 second")
-    field(ZRST, "Unknown")
-    field(ONST, "Waiting")
-    field(TWST, "Standby")
-    field(THST, "Safe-Conn")
-    field(FRST, "Running")
-    field(FVST, "Cool Down")
-    field(SXST, "Pump Error")
-    field(SVST, "HV Switched Off")
-    field(EIST, "Interlock")
-    field(NIST, "Shut Down")
-    field(TEST, "Calibration")
+    field(ZRST, "Standby")
+    field(ONST, "Starting")
+    field(TWST, "Running")
+    field(THST, "Cool Down")
+    field(FRST, "Pump Error")
+    field(FVST, "Invalid")
+    field(SXST, "Invalid")
+    field(SVST, "Invalid")
+    field(EIST, "Invalid")
+    field(NIST, "Invalid")
+    field(TEST, "Invalid")
     field(ELST, "Invalid")
     field(TVST, "Invalid")
     field(TTST, "Invalid")
@@ -339,9 +388,9 @@ record(bi,"$(device):STARTING")
 ################################################################################
 # Setpoints
 #
-# The MPC and MPCe controllers have four setpoints. Each setpoint has associated
-# with it an ON pressure, an OFF pressure and a supply.
-# Each pump on the controller is allocated two of the setpoints (pump setpoints 1 & 2).
+# The QPC controller has eight setpoints; 1-4 are relays, 5-8 are digital outputs.
+# Each setpoint has associated with it an ON pressure, an OFF pressure and a supply.
+# Each pump on the controller is allocated one of the setpoints.
 # The following table describes the mapping of controller setpoints and supplies to
 # each pump.
 # I Gillingham: April 2015
@@ -349,8 +398,8 @@ record(bi,"$(device):STARTING")
 #  Pump number   Pump_Setpoint Controller_Setpoint   Supply  
 #      1             1                   1             1
 #      2             1                   2             2
-#      1             2                   3             1
-#      2             2                   4             2
+#      3             1                   3             3
+#      4             1                   4             4
 
 ## ----------------- SP1 -------------------------------
 #
@@ -383,8 +432,6 @@ record(seq, "$(device):INIT:SETSPSEQ")
     field(LNK3, "$(device):SETSP1OFF PP")
     field(LNK4, "$(device):SETSP1ON PP")
     field(LNK5, "$(device):SETSPS1.DISA PP")
-    field(LNK6, "$(device):INIT:SETSP2SEQ PP")
-    field(LNK7, "$(device):INIT:SETSPSDIS PP")
     field(DLY1, "0")
     field(DLY2, "3.0")
     field(DLY3, "0")
@@ -399,32 +446,6 @@ record(seq, "$(device):INIT:SETSPSEQ")
     field(DOL7, "1")
     }
     
-# 1) Get the instrument value for SP2 ON/OFF
-# 1a) Wait one second for :RQSTSP2ON to complete and populate :SP2OFF and :SP2ON
-# 2) Disable instrument update of setting SP2 ON/OFF
-# 3) LOAD SETSP2OFF with SP2OFF
-# 4) LOAD SETSP2ON with SP2ON
-# 5) Enable instrument update of setting SP2 ON/OFF
-record(seq, "$(device):INIT:SETSP2SEQ")
-    {
-    field(SELM, "All")
-    field(LNK1, "$(device):RQSTSP2ON PP")
-    field(LNK2, "$(device):SETSPS2.DISA PP")
-    field(LNK3, "$(device):SETSP2OFF PP")
-    field(LNK4, "$(device):SETSP2ON PP")
-    field(LNK5, "$(device):SETSPS2.DISA PP")
-    field(DLY1, "0")
-    field(DLY2, "3.0")
-    field(DLY3, "0")
-    field(DLY4, "0")
-    field(DOL1, "0")
-    field(DOL2, "1")
-    field(DOL3, "$(device):SP2OFF")
-    field(DOL4, "$(device):SP2ON")
-    field(DOL5, "0")
-    }
-
-
 
 # Although requesting SPS is logically an input, a calcout has been 
 # used here to allow the return values to be injected directly into the 
@@ -433,23 +454,16 @@ record(seq, "$(device):INIT:SETSP2SEQ")
 # Record RQSTSP1OFF is I/O Intr and gets (a copy of) any input, including input that was directed to record RQSTSP1ON
 # Record RQSTSP1STATE is I/O Intr and gets (a copy of) any input, including input that was directed to record RQSTSP1ON
  
-# sps: Parameter 1) Unit number   2) Device base name    3) Logical setpoint number for this pump (1 | 2) - gets converted to actual setpoint in protocol.
+# sps: Parameter    1) Unit number
+#                   2) Device base name
+#                   3) Logical setpoint number for this pump (only 1 for the QPC) - gets converted to actual setpoint in protocol.
+#
 record(ai, "$(device):RQSTSP1ON") 
     {
     field(DESC, "Rqst Setpoint1")
     field(DTYP, "stream")
     field(SCAN, "Passive")
     field(INP,  "@digitelQpc.proto getsps($(unit),$(device),1) $(port)")
-    field(PINI, "NO")
-    }
-
-# sps: Parameter 1) Unit number   2) Device base name    3) Logical setpoint number for this pump (1 | 2).
-record(ai, "$(device):RQSTSP2ON") 
-    {
-    field(DESC, "Rqst Setpoint2")
-    field(DTYP, "stream")
-    field(SCAN, "Passive")
-    field(INP,  "@digitelQpc.proto getsps($(unit),$(device),2) $(port)")
     field(PINI, "NO")
     }
 
@@ -532,12 +546,16 @@ record(ao, "$(device):SETSP1OFF")
 # INPE => Upper pressure working limit
 # INPF => Setpoint interlock number [1..4]
 #
+# QPC Command:
+# N, F, S, XXE-XX, YY-YY
+# N - setpoint number (1-8, but specifically 1-4 for relays)
+# F - function: 0 = Off, 1 = Pressure Setpoint, 2 = HV Errors, 3 = HV On/Off Indicator
+#
 record(calcout, "$(device):SETSPS1") 
     {
     field(DESC, "Output Setpoints")
     field(DTYP, "stream")
     field(OUT,  "@digitelQpc.proto setsps($(unit),$(device),1) $(port)")
-##    field(OUT,  "@digitelQpc.proto setsps($(unit),$(pump)) $(port)")
     field(INPA, "$(device):SETSP1ON")
     field(INPB, "$(device):SETSP1OFF")
     field(INPC, "$(pump)")
@@ -551,127 +569,29 @@ record(calcout, "$(device):SETSPS1")
     }
 
 
-## ----------------- SP2 -------------------------------
-
-#% archiver 10 Monitor
-#% controldesk Setpoint 2 readback
-#
-# This PV is written to directly from the protocol (sps) return string
-record(ai, "$(device):SP2ON") 
-    {
-    field(DESC, "Setpoint 2 On")
-    field(EGU,  "mbar")
-    field(LOPR, "0.0")
-    field(HOPR, "1000.0")
-    field(PREC, "1")
-    }
-#
-#% archiver 10 Monitor
-#% controldesk Setpoint 2 readback
-#
-# This PV is written to directly from the protocol (sps) return string
-record(ai, "$(device):SP2OFF") 
-    {
-    field(DESC, "Setpoint 2 Off")
-    field(EGU,  "mbar")
-    field(LOPR, "0.0")
-    field(HOPR, "1000.0")
-    field(PREC, "1")
-    }
-# This PV is written to directly from the protocol (sps) return string
-record(bi,"$(device):SP2STATE")
-    {
-    field(DESC, "Setpoint 2 State")
-    field(PINI, "NO")
-    field(INP,  "0")
-    field(ZNAM, "Off")
-    field(ONAM, "On")
-    }
-#
-#% archiver 10 Monitor
-#% controldesk Setpoint 2 setpoint
-#
-record(ao, "$(device):SETSP2ON") 
-    {
-    field(VAL,  "$(sp2on=1.0E-7)")
-    field(DESC, "Setpoint 2 On")
-    field(EGU,  "mbar")
-    field(DRVL, "1.0E-10")
-    field(DRVH, "1.0E-4")
-    field(LOPR, "0.0")
-    field(HOPR, "1000.0")
-    field(PREC, "1")
-    field(FLNK, "$(device):SETSPS2")
-    }
-#
-#% archiver 10 Monitor
-#% controldesk Setpoint 2 Off setpoint
-#
-record(ao, "$(device):SETSP2OFF") 
-    {
-    field(VAL,  "$(sp2off=2.0E-7)")
-    field(DESC, "Setpoint 2 Off")
-    field(EGU,  "mbar")
-    field(DRVL, "1.0E-10")
-    field(DRVH, "1.0E-4")
-    field(LOPR, "0.0")
-    field(HOPR, "1000.0")
-    field(PREC, "1")
-    field(FLNK, "$(device):SETSPS2")
-    }
-
-# NB: INPF is written to by :SPNUM2 on PINI
-# INPA => Setpoint ON pressure
-# INPB => Setpoint OFF pressure
-# INPC => Source (usually equivalent to pump [1|2])
-# INPD => Lower pressure working limit
-# INPE => Upper pressure working limit
-# INPF => Setpoint interlock number [1..4]
-#
-record(calcout, "$(device):SETSPS2") 
-    {
-    field(DESC, "Output Setpoints")
-    field(DTYP, "stream")
-    field(OUT,  "@digitelQpc.proto setsps($(unit),$(device),1) $(port)")
-##    field(OUT,  "@digitelQpc.proto setsps($(unit),$(pump)) $(port)")
-    field(INPA, "$(device):SETSP2ON")
-    field(INPB, "$(device):SETSP2OFF")
-    field(INPC, "$(pump)")
-    field(INPD, "1.01E-10")
-    field(INPE, "9.99E-5")
-    field(INPF, "$(device):SPNUM2")    
-    field(CALC, "((A<D)||(B>E)||(F<1))?0:F")
-    field(OOPT, "When Non-zero")
-    field(PINI, "NO")
-    field(FLNK, "$(device):RQSTSP2ON")
-    }
-
-
 # Calculate the controller setpoint number for this pump
 # Each setpoint has an ON and an OFF pressure attribute.
-# Pump  Pump Setpoint  Controller Setpoint
+#
+# Note: This is a hangover from the digitelMpc which has
+# two setpoints per pumnp available, the QPC has only one per pump.
+# The notion of setpoint number has been preserved for completeness
+# and uniformity with the MPC template.
+#
+# Pump  Pump Setpoint  Controller Setpoint (relay)
 #   1       1                    1
-#   1       2                    3
-#   2       1                    2
-#   2       2                    4
+#   2       1                    3
+#   3       1                    2
+#   4       1                    4
 
 record(calc, "$(device):SPNUM1") 
     {
     field(DESC, "Controller setpoints number Pump 1")
     field(INPA, "$(pump)")
-    field(CALC, "(A>1)?2:1")
+    field(CALC, "(A>1)?A:1")
     field(PINI, "YES")
     field(FLNK, "$(device):SETSPS1")
     }
 
-record(calc, "$(device):SPNUM2") 
-    {
-    field(DESC, "Controller setpoints number Pump 2")
-    field(INPA, "$(pump)")
-    field(CALC, "(A>1)?4:3")
-    field(PINI, "YES")
-    field(FLNK, "$(device):SETSPS2")
-    }
 
 
 ################################################################################
@@ -679,7 +599,7 @@ record(calc, "$(device):SPNUM2")
 #
 record(stringout, "$(device):SETTEXT") {
     field(DESC, "Text String")
-    field(VAL , "$(text=$(device))")
+    field(VAL , "$(text=$(display))")
     field(DTYP, "stream")
     field(OUT,  "@digitelQpc.proto settext($(unit),$(pump)) $(port)")
     field(PINI, "YES")
@@ -694,3 +614,8 @@ record(stringin, "$(device):ERROR")
     field(DESC, "Last error message")
     }
 
+record(stringin, "$(device):INFO")
+{
+    field(DESC, "QPC Pump Info Text")
+    field(SCAN, "Passive")
+}
